src/test/ui/consts/const-eval/const_panic_libcore_bin.stderr
error: any use of this value will cause an error
  --> $DIR/const_panic_libcore_bin.rs:9:15
   |
LL | const Z: () = panic!("cheese");
   | --------------^^^^^^^^^^^^^^^^-
   |               |
   |               the evaluated program panicked at 'cheese', $DIR/const_panic_libcore_bin.rs:9:15
   |
   = note: `#[deny(const_err)]` on by default
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: any use of this value will cause an error
  --> $DIR/const_panic_libcore_bin.rs:12:15
   |
LL | const Y: () = unreachable!();
   | --------------^^^^^^^^^^^^^^-
   |               |
   |               the evaluated program panicked at 'internal error: entered unreachable code', $DIR/const_panic_libcore_bin.rs:12:15
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: any use of this value will cause an error
  --> $DIR/const_panic_libcore_bin.rs:15:15
   |
LL | const X: () = unimplemented!();
   | --------------^^^^^^^^^^^^^^^^-
   |               |
   |               the evaluated program panicked at 'not implemented', $DIR/const_panic_libcore_bin.rs:15:15
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 3 previous errors

